<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bacground"
    tools:context=".PricePlainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="78dp"
                    android:layout_height="77dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/iconaverage" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@null"
                    android:src="@drawable/ic_whatsapp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.642"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="5dp"
                    android:text="Help?"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.595"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/ic_btnfree"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2">
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="11dp"
                        android:foregroundGravity="center_vertical"
                        android:layout_gravity="center"
                        android:text="Use For Free"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=".............. OR .............."
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/upgrade"
                    android:textColor="@color/textcolor_red"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.475"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="15dp"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/netflix_bt"
                                android:layout_width="30dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="40dp"
                                android:background="@null"
                                android:src="@drawable/ic_netflix" />

                            <TextView
                                android:id="@+id/netflix_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/netflix"
                                android:textColor="@color/textcolor"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginBottom="15dp"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/secure_bt"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="40dp"
                                android:background="@null"
                                android:src="@drawable/ic_secure" />

                            <TextView
                                android:id="@+id/textView_secure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/secure_vpn"
                                android:textColor="@color/textcolor"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/imageButton_noads"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="40dp"
                                android:background="@null"
                                android:src="@drawable/ic_noads" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/noadvertisment"
                                android:textColor="@color/textcolor"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/imageButton_high_speed"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_marginStart="40dp"

                                android:background="@null"
                                android:src="@drawable/ic_high_speed" />

                            <TextView
                                android:id="@+id/higspeed_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/high_speed"
                                android:textColor="@color/textcolor"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpg_id"
                    android:layout_width="245dp"
                    android:layout_height="165dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:foregroundGravity="center_horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/tablayout_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tablayout_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewpg_id"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"></com.google.android.material.tabs.TabLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tablayout_id">

                    <TextView
                        android:id="@+id/texdtView8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="* lorem spdm sojfd sdofotoj s osjf s osdfj sjo fojkljyououe "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textVdiew8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="* lorem spdm sojfd sdofotoj s osjf s osdfj sjo fojkljyououe "
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/textVidew8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="* lorem spdm sojfd sdofotoj s osjf s osdfj sjo fojkljyououe "
                        android:textColor="@color/black" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>